objects/ssot__HealthcareProvider__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CAQHIdentifierText__c</fullName>
        <label>ConclforAffrdQltyHlthcrId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EHRSystemName__c</fullName>
        <label>Electronic Health Records System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveFromDate__c</fullName>
        <label>Effective From Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveToDate__c</fullName>
        <label>Effective To Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__HasCarrierContract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Carrier Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareProviderStatus__c</fullName>
        <label>Healthcare Provider Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareProviderType__c</fullName>
        <label>Healthcare Provider Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Healthcare Provider Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InitialStartDate__c</fullName>
        <label>Initial Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PractitionerId__c</fullName>
        <label>Practitioner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProviderClass__c</fullName>
        <label>Provider Class</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProviderServiceOrgAccountId__c</fullName>
        <label>Provider Service Org Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferredByContactId__c</fullName>
        <label>Referred By Contact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedUserId__c</fullName>
        <label>Related User</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShouldExcludeFromSearch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Should Exclude From Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__TerminationDate__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__TerminationReasonText__c</fullName>
        <label>Termination Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalLicensedBedsCount__c</fullName>
        <label>Total Licensed Beds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725809430_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthcareProvider_RelatedUserId_map_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>HealthcareProvider_RelatedUserId_map_rel</relationshipLabel>
        <relationshipName>rel_1716725809430_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725812092_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthcareProvider_ProviderServiceOr_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>HealthcareProvider_ProviderServiceOr_rel</relationshipLabel>
        <relationshipName>rel_1716725812092_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>